<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_home" />
        <!--<item
            android:id="@+id/nav_recipe"
            android:icon="@drawable/recipe_menu"
            android:title="Recipes" />-->
        <item android:title="@string/nav_user" android:id="@+id/nav_user">
            <menu>
                <item
                    android:id="@+id/nav_myorders"
                    android:icon="@drawable/ic_nav_order"
                    android:title="@string/nav_order" />
                <item
                    android:id="@+id/nav_myprofile"
                    android:icon="@drawable/ic_nav_profile"
                    android:title="@string/nav_profile" />
            </menu>
        </item>

        <item android:title="@string/app_name">
            <menu>
                <item
                    android:id="@+id/nav_support"
                    android:icon="@drawable/ic_nav_support"
                    android:title="@string/nav_support" />
                <item
                    android:id="@+id/nav_aboutus"
                    android:icon="@drawable/ic_nav_about"
                    android:title="@string/nav_about" />
                <item
                    android:id="@+id/nav_policy"
                    android:icon="@drawable/ic_nav_policy"
                    android:title="@string/nav_terms" />
                <item
                    android:id="@+id/nav_review"
                    android:icon="@drawable/ic_nav_review"
                    android:title="@string/nav_review" />
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_nav_share"
                    android:title="@string/nav_share" />
            </menu>
        </item>

        <item android:title="">
            <menu>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_exit"
                    android:title="@string/nav_logout" />
            </menu>
        </item>
    </group>
</menu>
