<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cart_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:paddingBottom="@dimen/space_8"
            android:paddingTop="@dimen/space_8"
            android:text="@string/tv_cart_clear"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/space_10">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_cart_item" />

                <TextView
                    android:id="@+id/tv_cart_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="@dimen/space_10">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_cart_total" />

                <TextView
                    android:id="@+id/tv_cart_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="50" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/currency" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_cart_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:drawableEnd="@mipmap/ic_next"
            android:drawableRight="@mipmap/ic_next"
            android:padding="@dimen/space_5"
            android:text="@string/tv_cart_checkout"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>