<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_10">

            <TextView
                android:id="@+id/tv_change_old_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_change_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_5"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_change_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_change_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_5"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_change_con_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_change_con_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_5"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/xml_button"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>