<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="codecanyon.grocery.LoginActivity">

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        android:src="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:src="@drawable/ic_logo_2"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/tv_login_email"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5"
            android:background="@drawable/xml_textbox_bg"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:padding="@dimen/space_10"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/tv_login_password"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_10"
            android:layout_marginTop="@dimen/space_5"
            android:background="@drawable/xml_textbox_bg"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textPassword"
            android:maxLength="10"
            android:padding="@dimen/space_10"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/xml_button"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textSize="18sp" />



        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:background="@drawable/xml_button"
            android:text="@string/tv_reg"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btnForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/forgot"
            android:textColor="@color/dark_gray"
            android:textSize="13sp" />
    </LinearLayout>

</RelativeLayout>
