<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtdelivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e5e5e5"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/space_10"
        android:paddingTop="@dimen/space_10"
        android:text="@string/tv_del_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout2"
        android:layout_below="@+id/txtdelivery"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/radioLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/xml_box_shadow_bottom"
                android:orientation="vertical"
                android:padding="@dimen/space_10">

                <TextView
                    android:id="@+id/tv_deli_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_5"
                    android:background="@drawable/xml_textbox_blue_bg"
                    android:drawableLeft="@drawable/ic_timeslot_07"
                    android:gravity="center_vertical"
                    android:text="@string/tv_del_date"
                    android:textColor="@color/white"
                    android:padding="@dimen/space_5"/>

                <TextView
                    android:id="@+id/tv_deli_fromtime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_5"
                    android:background="@drawable/xml_textbox_blue_bg"
                    android:drawableLeft="@drawable/ic_timeslot_17"
                    android:gravity="center_vertical"
                    android:text="@string/tv_del_time"
                    android:textColor="@color/white"
                    android:padding="@dimen/space_5"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_10"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_5"
                    android:background="#e5e5e5"
                    android:padding="@dimen/space_8"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tv_del_address"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/tv_deli_add_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_timeslot_28"
                        android:drawableStart="@drawable/ic_timeslot_28"
                        android:text="Add"
                        android:textColor="@color/white"
                        android:background="@drawable/xml_textbox_blue_bg"
                        android:gravity="center_vertical"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:padding="@dimen/space_5"
                        android:drawablePadding="@dimen/space_5"/>

                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rv_deli_address" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/space_10">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_cart_item" />

                <TextView
                    android:id="@+id/tv_deli_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end"
                android:padding="@dimen/space_10">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_cart_total" />

                <TextView
                    android:id="@+id/tv_deli_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="50" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_2"
                    android:text="@string/currency" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_deli_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:drawableEnd="@mipmap/ic_next"
            android:drawableRight="@mipmap/ic_next"
            android:padding="@dimen/space_5"
            android:text="@string/tv_del_continue"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>